--- a/main.html
+++ b/main.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+
+	<img class="moviePic" src="https://rukminim2.flixcart.com/image/850/1000/jf8khow0/poster/a/u/h/small-hollywood-movie-poster-blade-runner-2049-ridley-scott-original-imaf3qvx88xenydd.jpeg?q=90&crop=false" alt="blade-runner">
+    <p class="movieDetail">Movie Description</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dignissimos dicta provident, libero, nemo perferendis aspernatur, facilis voluptatem error quaerat sit id blanditiis. Magnam quidem molestiae voluptate libero qui? Perferendis?</p>
+
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
